Improve metadata / favicons 1

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,9 +5,20 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <!--
-      The title, favicon, and other meta tags will be set dynamically by Helmet in the React app.
-    -->
+  <!-- Default meta tags as fallbacks; Helmet will override these dynamically -->
+  <meta name="description" content="View your custom proposal from Cloud Steward." />
+  <meta property="og:title" content="Cloud Steward Proposal" />
+  <meta property="og:description" content="View your custom proposal from Cloud Steward." />
+  <meta property="og:image" content="/android-chrome-192x192.png" />
+  <meta property="og:type" content="website" />
+  <!-- Favicon and icon links set statically -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png" />
+  <link rel="manifest" href="/manifest.json" />
   <title>Cloud Steward Proposal</title>
 </head>
 
