Improve metadata / favicons 3

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,16 +9,18 @@
   <meta name="description" content="View your custom proposal from Cloud Steward." />
   <meta property="og:title" content="Cloud Steward Proposal" />
   <meta property="og:description" content="View your custom proposal from Cloud Steward." />
-  <meta property="og:image" content="/android-chrome-192x192.png" />
+  <meta property="og:image" content="%PUBLIC_URL%/android-chrome-192x192.png" />
   <meta property="og:type" content="website" />
-  <!-- Favicon and icon links set statically -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
-  <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png" />
-  <link rel="manifest" href="/manifest.json" />
+
+  <!-- Favicon and icon links using %PUBLIC_URL% placeholders -->
+  <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/android-chrome-512x512.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
   <title>Cloud Steward Proposal</title>
 </head>
 
